--- a/Project.toml
+++ b/Project.toml
@@ -8,11 +8,12 @@ BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+IndexedTables = "6deec6e2-d858-57c5-ab9b-e6ca5bd20e43"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
-JuliaDB = "a93385a2-3734-596a-9a66-3cfbb77141e6"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
