--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
+DataFrames = "1"
 julia = "1"
 
 [extras]
