--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 IndexedTables = "6deec6e2-d858-57c5-ab9b-e6ca5bd20e43"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
